# rag-

./: RAGV2.ipynb  README.md  pyproject.toml  rag22.ipynb
store/: chroma.sqlite3
