[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chromadb>=1.5.5",
    "ipykernel>=6.31.0",
    "langchain>=0.3.28",
    "langchain-community>=0.3.31",
    "langchain-openai>=0.3.35",
    "langchain-text-splitters>=0.3.11",
    "pypdf>=6.9.1",
    "python-dotenv>=1.2.1",
    "tiktoken>=0.12.0",
]
